--- a/src/app/temas/temas.component.html
+++ b/src/app/temas/temas.component.html
@@ -42,11 +42,9 @@
         class="d-block w-100"
         src="https://marsemfim.com.br/wp-content/uploads/2019/06/faz.jpg"
         alt="First slide"
-        width="400px"
-        height="800px"
       />
       <div class="carousel-caption d-none d-md-block">
-        <h3>Pesca Predatoria</h3>
+        <h3 class="text-white">Pesca Predatoria</h3>
         <p>
           Lorem ipsum dolor sit amet consectetur adipisicing elit. Non inventore
           iusto, eaque architecto ratione, distinctio exercitationem atque
@@ -60,8 +58,7 @@
         class="d-block w-100"
         src="https://estaticos.efe.com/efecom/recursos2/imagen.aspx?lVW2oAh2vjMKa7TOD-P-2fdZE9ZfIDzYfOglQ4TncnkXVSTX-P-2bAoG0sxzXPZPAk5l-P-2fU5Uux-P-2buXnZ36NWIDfeuNwsMLA-P-3d-P-3d"
         alt="Second slide"
-        width="400px"
-        height="800px"
+
       />
       <div class="carousel-caption d-none d-md-block">
         <h3>Poluição do habitat marinho</h3>
@@ -78,8 +75,7 @@
         class="d-block w-100"
         src="https://www.gov.br/agricultura/pt-br/assuntos/noticias/pescador-artesanal-podera-apresentar-protocolo-de-registro-para-ter-acesso-a-financiamentos/pescador-istock-648974258.jpg/@@images/0864b029-9298-465d-a3c9-f07cc0ac6622.jpeg"
         alt="Third slide"
-        width="400px"
-        height="800px"
+
       />
       <div class="carousel-caption d-none d-md-block">
         <h3>Pesca Artesanal e sustentabilidade</h3>
@@ -91,8 +87,7 @@
         class="d-block w-100"
         src="https://www.funverde.org.br/blog/wp-content/uploads/2018/07/A-acidificacao-dos-oceanos-e-um-desafio-para-a-ciencia-governos-e-comunidades.jpg"
         alt="Third slide"
-        width="400px"
-        height="800px"
+
       />
       <div class="carousel-caption d-none d-md-block">
         <h3>Acidificação dos Oceanos</h3>
