mexendo no minhas postagens

--- a/src/app/inicio/inicio.component.html
+++ b/src/app/inicio/inicio.component.html
@@ -175,7 +175,7 @@
               <button
                 (click)="getPostagemById(item.id)"
                 (click)="descurtida(item.id)"
-                class="mudaFonte bgBlue btn"
+                class="mudaFonte bgBlue btn p-0"
               >
                 <img
                   src="https://i.imgur.com/sqUvqU7.png"
