Implementando ordenacao no canto direito do feed

--- a/src/app/inicio/inicio.component.css
+++ b/src/app/inicio/inicio.component.css
@@ -3,6 +3,14 @@
 @import url(https://fonts.googleapis.com/css2?family=Bubblegum+Sans&display=swap);
 
 
+.fs-5{
+    font-size:5pt;
+}
+
+.y{
+    overflow-y: scroll;
+}​​​​​​
+
 
 
 
