--- a/src/app/inicio/inicio.component.html
+++ b/src/app/inicio/inicio.component.html
@@ -1,38 +1,35 @@
-<!-- Começo do canto direito do feed -->
 <div class="container-fluid bgBlue">
+  <!-- Começo do canto direito do feed -->
   <div
     id="div1"
     class="col-md-3 col-sm-12 sticky-top text-white margintoptitulo"
   >
-    <div class="justify-content-center text-center">
-      <div>
-        <h3>O MAIS FURADOS</h3>
+    <div class="d-flex justify-content-center">
+      <h3>O MAIS FURADOS</h3>
+    </div>
+    <div
+      class="justify-content-center text-center"
+      *ngFor="let item of listaPostagens | orderBy: keyy:reverse "
+    >
+      <div class="testimonials-col" >
+        <img src="{{ item.usuario.foto }}" />
+
+        <div class="nomefeed mt-4">
+          <h3 class="font-20">{{ item.usuario.nome }}</h3>
+          <p class="card-text">
+            <small class="text-muted"
+              >{{ item.data | date: "dd/MM/yyyy" }} às
+              {{ item.data | date: "HH:mm" }}</small
+            >
+          </p>
+        </div>
+        
       </div>
-      <div class="marginsub70">
-        <h5>Trummer</h5>
-      </div>
-      <div class="marginsub70 text-left">
-        <p>
-          Os peixes são animais vertebrados, aquáticos, tipicamente
-          ectotérmicos, que possuem o corpo fusiforme, os membros transformados
-          em barbatanas ou nadadeiras ...
-        </p>
-      </div>
+      <div class=" text-left ">{{ item.titulo }}</div>
+      <div class="m-12 text-left">{{ item.texto }}</div>
     </div>
 
-    <div class="justify-content-center text-center">
-      <div class="marginsub70">
-        <h5>Modesto</h5>
-      </div>
-      <div class="marginsub70 text-left">
-        <p>
-          Os peixes são animais vertebrados, aquáticos, tipicamente
-          ectotérmicos, que possuem o corpo fusiforme, os membros transformados
-          em barbatanas ou nadadeiras ...
-        </p>
-      </div>
-    </div>
-
+    <!--Rodape COMECA AQUI -->
     <div>
       <div class="container">
         <div class="row">
@@ -74,6 +71,7 @@
         </div>
       </div>
     </div>
+    <!--Rodape ACABA AQUI -->
   </div>
   <!-- Final do canto direito do feed -->
 
@@ -127,8 +125,6 @@
     </nav>
 
     <div class="card-rows justify-content-center margin-18">
-      
-
       <div *ngFor="let item of listaPostagens | orderBy: key:reverse">
         <div class="card-body bgBlue text-white">
           <section class="testimonials">
