Finalizando a pagina de temas

--- a/src/app/temas/temas.component.html
+++ b/src/app/temas/temas.component.html
@@ -46,10 +46,7 @@
       <div class="carousel-caption d-none d-md-block">
         <h3 class="text-white">Pesca Predatoria</h3>
         <p>
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Non inventore
-          iusto, eaque architecto ratione, distinctio exercitationem atque
-          dolorem, eius quas voluptatum hic alias laborum! Quam ullam explicabo
-          possimus impedit aperiam?
+          A pesca predatória é definida como a retirada de indivíduos de uma população natural em uma velocidade superior à capacidade de recuperação do estoque. 
         </p>
       </div>
     </div>
@@ -63,10 +60,7 @@
       <div class="carousel-caption d-none d-md-block">
         <h3>Poluição do habitat marinho</h3>
         <p>
-          Lorem ipsum dolor, sit amet consectetur adipisicing elit. Veritatis
-          alias accusamus exercitationem doloremque, in error autem maxime
-          blanditiis natus consectetur at vel ea? Quod rerum quibusdam, ratione
-          ab rem cumque.
+          A poluição do habitat marinho é caracterizado pela alteração das propriedades Físico-Químicas da água. São diversas as causas desse tipo de poluição.
         </p>
       </div>
     </div>
@@ -79,7 +73,7 @@
       />
       <div class="carousel-caption d-none d-md-block">
         <h3>Pesca Artesanal e sustentabilidade</h3>
-        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Aliquam, possimus fugit tenetur odit quaerat doloremque sit sapiente eum exercitationem, id aperiam tempore cum. Magnam officiis reprehenderit nemo quaerat in quibusdam!</p>
+        <p>A pesca artesanal é um tipo de pesca caracterizada principalmente pela mão de obra familiar, com embarcações pequenas, como canoas ou jangadas, ou ainda sem embarcações, como na captura de moluscos perto da costa. Sua área de atuação está nas proximidades da costa e nos rios e lagos.</p>
       </div>
     </div>
     <div class="carousel-item">
@@ -91,7 +85,7 @@
       />
       <div class="carousel-caption d-none d-md-block">
         <h3>Acidificação dos Oceanos</h3>
-        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Aliquam, possimus fugit tenetur odit quaerat doloremque sit sapiente eum exercitationem, id aperiam tempore cum. Magnam officiis reprehenderit nemo quaerat in quibusdam!</p>
+        <p>Entende-se por acidificação a redução do pH dos oceanos por longos períodos de tempo (décadas ou mais). Esta redução do pH é causada principalmente pela dissolução do CO2 atmosférico nos oceanos.</p>
       </div>
     </div>
   </div>
