--- a/src/app/inicio/inicio.component.html
+++ b/src/app/inicio/inicio.component.html
@@ -2,20 +2,31 @@
   <!-- Começo do canto direito do feed -->
   <div
     id="div1"
-    class="col-md-3 col-sm-12 sticky-top text-white margintoptitulo"
+    class="col-md-3 col-sm-12 sticky-top text-white margintoptitulo y"
   >
-    <div class="d-flex justify-content-center">
+    <div class="d-flex justify-content-center "  >
       <h3>O MAIS FURADOS</h3>
     </div>
+    <!--<tr *ngFor="let hero of heroes; let i = index;" > -->
+      <tr *ngFor="let hero of heroes; let i = index;" >
+
+    <span *ngIf="i=== 1">{{hero.name}} </span> 
+      <td class='first'>{{hero.name}}</td>
+  </tr>
     <div
       class="justify-content-center text-center"
-      *ngFor="let item of listaPostagens | orderBy: keyy:reverse "
+     
+      *ngFor="let item of listaPostagens.slice(0,2) | orderBy: keyy:reverse "
+    
+      
     >
+   
+  
       <div class="testimonials-col" >
         <img src="{{ item.usuario.foto }}" />
-
+       
         <div class="nomefeed mt-4">
-          <h3 class="font-20">{{ item.usuario.nome }}</h3>
+          <h3 class="font-20">{{ item.usuario.nome  }}</h3>
           <p class="card-text">
             <small class="text-muted"
               >{{ item.data | date: "dd/MM/yyyy" }} às
@@ -125,7 +136,7 @@
     </nav>
 
     <div class="card-rows justify-content-center margin-18">
-      <div *ngFor="let item of listaPostagens | orderBy: key:reverse">
+      <div *ngFor="let item of listaPostagens | orderBy: keyy:reverse">
         <div class="card-body bgBlue text-white">
           <section class="testimonials">
             <div class="row">
