implementando duas postagens mais curtidas no inicio

--- a/src/app/contato/contato.component.html
+++ b/src/app/contato/contato.component.html
@@ -8,17 +8,17 @@
           <h1 class="text-center">Fale conosco</h1>
 
           <div class="from-group mt-5" id="name-form">
-            <label for="name" class="p-0">Seu nome*</label>
-            <input type="text" id="name" name="name" class="linha" />
+            <label for="name" class="p-0">Nome*</label>
+            <input type="text" id="name" name="name" class="linha"  />
           </div>
 
           <div class="form-group" id="email-form">
-            <label for="email" class="p-0">Seu email*</label>
-            <input type="email" id="email" name="email" class="linha" />
+            <label for="email" class="p-0">E-mail*</label>
+            <input type="email" id="email" name="email" class="linha"  />
           </div>
 
           <div class="form-group" id="message-form">
-            <label for="message" class="p-0">Sua mensagem</label>
+            <label for="message" class="p-0">Mensagem</label>
             <textarea id="message" name="message" class="linha"></textarea>
           </div>
 
