--- a/src/app/inicio/inicio.component.html
+++ b/src/app/inicio/inicio.component.html
@@ -5,13 +5,13 @@
     class="col-md-3 col-sm-12 sticky-top text-white margintoptitulo"
   >
     <div class="d-flex justify-content-center">
-      <h3>O MAIS FURADOS</h3>
+      <h3>OS MAIS FURADOS</h3>
     </div>
     <div
       class="justify-content-center text-center"
-      *ngFor="let item of listaPostagens | orderBy: keyy:reverse "
+      *ngFor="let item of listaPostagemMaisCurtidas.slice(-2)"
     >
-      <div class="testimonials-col" >
+      <div class="testimonials-col">
         <img src="{{ item.usuario.foto }}" />
 
         <div class="nomefeed mt-4">
@@ -23,9 +23,8 @@
             >
           </p>
         </div>
-        
       </div>
-      <div class=" text-left ">{{ item.titulo }}</div>
+      <div class="text-left">{{ item.titulo }}</div>
       <div class="m-12 text-left">{{ item.texto }}</div>
     </div>
 
