--- a/src/app/minhas-postagens/minhas-postagens.component.html
+++ b/src/app/minhas-postagens/minhas-postagens.component.html
@@ -5,7 +5,9 @@
     class="col-md-3 col-sm-12 sticky-top text-white margintoptitulo"
   >
     <div class="justify-content-center text-center">
-      <div><h3>O MAIS FURADOS</h3></div>
+      <div class="d-flex justify-content-center">
+        <h3>OS MAIS FURADOS</h3>
+      </div>
       <div class="marginsub70"><h5>Trummer</h5></div>
       <div class="marginsub70 text-left">
         <p>
@@ -27,6 +29,15 @@
       </div>
     </div>
 
+
+
+
+
+
+
+
+
+    
     <div>
       <div class="container">
         <div class="row">
@@ -91,18 +102,17 @@
         <div class="main">
           <div class="sub-main">
             <div class="row justify-content-center">
+              <a [routerLink]="['/user-edit', id]">
+                <button class="btn btn-outline-light">Editar Perfil</button>
+              </a>
               <button
-                class="btn btn-outline-light mr-3"
+                class="btn btn-outline-light ml-3"
                 data-toggle="modal"
                 data-target="#novaPostagem"
                 (click)="getAllTemas()"
               >
                 Post
               </button>
-
-              <a [routerLink]="['/user-edit', id]">
-                <button class="btn btn-outline-light">Editar Perfil</button>
-              </a>
             </div>
           </div>
         </div>
@@ -184,8 +194,6 @@
               </button>
               Bolhas: {{ item.descurtidas }}
             </div>
-
-            
 
             <div>
               <img
