Implementando o scroll-y nos mais furados

--- a/src/app/inicio/inicio.component.html
+++ b/src/app/inicio/inicio.component.html
@@ -4,6 +4,9 @@
     id="div1"
     class="col-md-3 col-sm-12 sticky-top text-white margintoptitulo"
   >
+  
+  <div class="scroll">
+
     <div class="d-flex justify-content-center">
       <h3>OS MAIS FURADOS</h3>
     </div>
@@ -28,6 +31,7 @@
       <div class="m-12 text-left">{{ item.texto }}</div>
     </div>
 
+  </div>
     <!--Rodape COMECA AQUI -->
     <div>
       <div class="container">
