--- a/src/app/inicio/inicio.component.css
+++ b/src/app/inicio/inicio.component.css
@@ -7,9 +7,27 @@
     font-size:5pt;
 }
 
-.y{
+
+
+.scroll{
     overflow-y: scroll;
-}​​​​​​
+    height: 500px;
+
+
+}
+
+.scroll::-webkit-scrollbar {
+    width: 12px;               /* width of the entire scrollbar */
+  }
+.scroll::-webkit-scrollbar-track {
+    background: white;        /* color of the tracking area */
+  }
+
+.scroll::-webkit-scrollbar-thumb {
+    background-color: blue;    /* color of the scroll thumb */
+    border-radius: 20px;       /* roundness of the scroll thumb */
+    border: 3px solid white;  /* creates padding around scroll thumb */
+  }
 
 
 
