--- a/src/app/minhas-postagens/minhas-postagens.component.css
+++ b/src/app/minhas-postagens/minhas-postagens.component.css
@@ -3,7 +3,25 @@
 @import url(https://fonts.googleapis.com/css2?family=Bubblegum+Sans&display=swap);
 
 
+.scroll{
+    overflow-y: scroll;
+    height: 500px;
 
+
+}
+
+.scroll::-webkit-scrollbar {
+    width: 12px;               /* width of the entire scrollbar */
+  }
+.scroll::-webkit-scrollbar-track {
+    background: white;        /* color of the tracking area */
+  }
+
+.scroll::-webkit-scrollbar-thumb {
+    background-color: blue;    /* color of the scroll thumb */
+    border-radius: 20px;       /* roundness of the scroll thumb */
+    border: 3px solid white;  /* creates padding around scroll thumb */
+  }
 
 .mudaFonte{
     font-family: 'Bubblegum Sans' !important;
