--- a/src/app/minhas-postagens/minhas-postagens.component.html
+++ b/src/app/minhas-postagens/minhas-postagens.component.html
@@ -4,6 +4,7 @@
     id="div1"
     class="col-md-3 col-sm-12 sticky-top text-white margintoptitulo"
   >
+  <div class="scroll">
     <div class="d-flex justify-content-center">
       <h3>OS MAIS FURADOS</h3>
     </div>
@@ -27,7 +28,7 @@
       <div class="text-left">{{ item.titulo }}</div>
       <div class="m-12 text-left">{{ item.texto }}</div>
     </div>
-
+  </div>
     <!--Rodape COMECA AQUI -->
     <div>
       <div class="container">
