--- a/src/app/minhas-postagens/minhas-postagens.component.html
+++ b/src/app/minhas-postagens/minhas-postagens.component.html
@@ -277,7 +277,8 @@
                   type="button"
                   class="btn btn-danger"
                   data-dismiss="modal"
-                  (click)="apagar(item.id)"
+                  data-toggle="modal"
+                data-target="#deletePostagem"
                 >
                   Deletar
                 </button>
@@ -286,11 +287,50 @@
           </div>
         </div>
         <!--Fim do modal editar postagem-->
+      <!-- Modal Delete Post-->
+
+    <div 
+    class="modal fade"
+    id="deletePostagem"
+    tabindex="-1"
+    role="dialog"
+    aria-labelledby="TituloModalCentralizado"
+    aria-hidden="true"
+    tabindex="-1" role="dialog">
+      <div class="modal-dialog" role="document">
+        <div class="modal-content">
+          <div class="modal-header">
+            <h5 class="modal-title">Deletar A Postagem</h5>
+            <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+              <span aria-hidden="true">&times;</span>
+            </button>
+          </div>
+          <div class="modal-body">
+            <p>Deseja realmente apagar a Postagem?</p>
+          </div>
+          <div class="modal-footer">
+            <button type="button"       
+            class="btn btn-danger"
+            data-dismiss="modal"
+            (click)="apagar(item.id)">apagar</button>
+            <button type="button" class="btn btn-secondary" data-dismiss="modal">Fechar</button>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <!-- Fim Modal Delete Post-->
+
+      
+      
       </div>
 
       <!-- ! Fim dos cards de Postagem por Tema -->
     </div>
     <!--Fim do Feed-->
+
+    
+
 
     <!-- Modal novo Post -->
     <div
