--- a/src/app/sobre-nos-a-revanche/sobre-nos-a-revanche.component.html
+++ b/src/app/sobre-nos-a-revanche/sobre-nos-a-revanche.component.html
@@ -7,7 +7,7 @@
       <div class="col-md-6">
         <div class="row d-flex justify-content-center">
           <div class="col-md-6 text-white-center">
-            <h1 class="text-center">Nosso Time</h1>
+            <!--h1 class="text-center">alalalalalla</h1-->
           </div>
         </div>
       </div>
@@ -16,7 +16,7 @@
     <main >
 
       <div class="mt-5 d-flex justify-content-center">
-      <h1 class="text-white">Nosso Time</h1>
+      <h1 class="text-white mt-5">Nosso Time</h1>
     </div>
       <div class="row col-md-12 d-flex justify-content-center ajeita">
 
