--- a/src/app/cadastrar/cadastrar.component.html
+++ b/src/app/cadastrar/cadastrar.component.html
@@ -29,7 +29,7 @@
                               type="text"
                               name="foto"
                               id="foto"
-                              placeholder="Link da sua foto"
+                              placeholder="Link da sua foto ou gif"
                               [(ngModel)]='usuario.foto'
                             />
                           </div>
@@ -54,7 +54,7 @@
                             [(ngModel)]='usuario.dataNascimento' />
                         </div>
     
-                        <div class="form-group">
+                        <!-- <div class="form-group">
                             <label  for="tipo">Tipo do usuario</label>
                             <select (change)="tipoUser($event)"
                             name="tipo" id="tipo" class="linha">
@@ -63,7 +63,7 @@
                             <option value="admin">Admin</option>
                             </select>
 
-                        </div>
+                        </div> -->
 
 
                         <div class="d-flex justify-content-center">
