--- a/src/app/edit/usuario-edit/usuario-edit.component.html
+++ b/src/app/edit/usuario-edit/usuario-edit.component.html
@@ -55,7 +55,7 @@
                                 [(ngModel)]='usuario.dataNascimento' />
                             </div>
         
-                            <div class="form-group">
+                            <!-- <div class="form-group">
                                 <label  for="tipo">Tipo do usuario</label>
                                 <select (change)="tipoUser($event)"
                                 name="tipo" id="tipo" class="linha">
@@ -64,7 +64,7 @@
                                 <option value="admin">Admin</option>
                                 </select>
     
-                            </div>
+                            </div> -->
     
     
                             <div class="d-flex justify-content-center">
