--- a/src/app/visualizacao/visualizacao.component.html
+++ b/src/app/visualizacao/visualizacao.component.html
@@ -5,7 +5,7 @@
   
 
 <div class="container">
-  <header class="item header"><h1>FURANDO A BOLHA</h1></header>
+  <header class="item header justify-content-center"><h1>FURANDO A BOLHA</h1></header>
   <div class="scroll">
 
     <div class="d-flex justify-content-center">
