--- a/src/app/inicio/inicio.component.css
+++ b/src/app/inicio/inicio.component.css
@@ -88,6 +88,7 @@ li {
     width: 33%;
     float: left;
     height: 100vh;
+    position: relative;
 }
 
 .mudaFonte{
@@ -146,6 +147,27 @@ li {
     font-size:24px;
     margin: 0 0 0 100px;
   }
+
+  #fechar:target{
+	display: block;
+	
+}
+
+
+  #fechar:target ~ #div3{
+    top:150px;
+    transition: all .3s;
+    transition-delay: .2s;
+    display: none;
+}
+
+#fechar:hover{
+	opacity: .6;
+}
+
+
+
+
   @media (max-width: 870px) {
   #div1{
     position: static;
@@ -153,12 +175,29 @@ li {
     height: 100%;
   }
   #div3{
-    position: static;
+    position: none;
     width: 100%;
+    height: 400px;
+    z-index: auto;
 
   }
 
+  #div2{
+    margin-top: 50px;
+  }
 
+  section.testimonials.ml-{
+      height: 1px;
+  }
+
+  #fechar:target ~ #div3{
+        top:150px;
+        transition: all .3s;
+        transition-delay: .2s;
+        display: none;
+    
+    
+  }
   
 
 }
@@ -201,3 +240,4 @@ ul.social-network li{
     -webkit-background-clip: text;
     -webkit-text-fill-color: transparent;
 }
+
