--- a/src/app/inicio/inicio.component.css
+++ b/src/app/inicio/inicio.component.css
@@ -146,22 +146,7 @@ li {
     font-size:24px;
     margin: 0 0 0 100px;
   }
-  @media (max-width: 870px) {
-  #div1{
-    position: static;
-    width: 100%;
-    height: 100%;
-  }
-  #div3{
-    position: static;
-    width: 100%;
-
-  }
-
-
-  
-
-}
+ 
 
 ul.social-network{
     list-style: none;
@@ -200,4 +185,37 @@ ul.social-network li{
     background-clip: text;
     -webkit-background-clip: text;
     -webkit-text-fill-color: transparent;
+}
+@media (max-width: 870px) {
+  #div1{
+    position: static;
+    width: 100%;
+    height: 100%;
+  }
+  #div3{
+   
+    width: 100%;
+    height: 400px;
+    position: relative;
+    border-radius: 20px;
+    border-color: black;
+  }
+
+  #div2{
+    margin-top: 50px;
+  }
+
+  section.testimonials.ml-{
+      height: 1px;
+  }
+
+  #div3 .row {
+    display: flex;
+    flex-wrap: wrap;
+    margin-right: -15px;
+    margin-left: -15px;
+    margin-top: 32px;
+}
+  
+
 }
